Prevent content text overflow

--- a/css/main.css
+++ b/css/main.css
@@ -98,6 +98,7 @@ a:hover img {
 }
 div[id*="content-"] {
 	display: none;
+	word-break: break-word;
 }
 #footer {
 	float: left;
